test/core/errors/parameterized_types_error/zs/referenced_enum_type_error.zs
package referenced_enum_type_error;

enum uint32 Item
{
    ONE,
    TWO
};

struct ItemHolder
{
    uint32          version;
    Item(version)   item;
};
